[package]
name = "esp-display-interface-spi-dma"
version = "1.0.0"
edition = "2021"
authors = [
    "bjoernQ <bjoern.quentin@mobile-j.de>",
    "Juraj Michálek <juraj.michalek@espressif.com>"
]
description = "Rust Bare Metal SPI Display Interface with DMA support for ESP32 chips"
repository  = "https://github.com/georgik/esp-display-interface-spi-dma"
license     = "MIT OR Apache-2.0"

[dependencies]
byte-slice-cast = { version = "0.3.5", default-features = false }
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.1"
embedded-hal = { version = "1.0.0" }
embedded-dma = "0.2.0"
num-traits = { version = "0.2.17", default-features = false }
esp-hal = { version = "0.17.0", optional = true }

[features]
default = [  ]
esp32c2 = [ "esp-hal/esp32c2" ]
esp32c3 = [ "esp-hal/esp32c3" ]
esp32c6 = [ "esp-hal/esp32c6" ]
esp32h2 = [ "esp-hal/esp32h2" ]
esp32   = [ "esp-hal/esp32" ]
esp32s2 = [ "esp-hal/esp32s2" ]
esp32s3 = [ "esp-hal/esp32s3" ]
