[package]
name = "esp-display-interface-spi-dma"
version = "0.2.0"
edition = "2021"
authors = [
    "bjoernQ <bjoern.quentin@mobile-j.de>",
    "Juraj Michálek <juraj.michalek@espressif.com>"
]
description = "Rust Bare Metal SPI Display Interface with DMA support for ESP32 chips"
repository  = "https://github.com/georgik/esp-display-interface-spi-dma"
license     = "MIT OR Apache-2.0"

[dependencies]
byte-slice-cast = { version = "1.2.2", default-features = false }
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal = { version = "1.0.0" }
embedded-dma = "0.2.0"
num-traits = { version = "0.2.19", default-features = false }
esp-hal = { version = "0.23.1", default-features = false }

[features]
default = []
esp32 = [ "esp-hal/esp32" ]
esp32c3 = [ "esp-hal/esp32c3" ]
esp32c6 = [ "esp-hal/esp32c6" ]
esp32s2 = [ "esp-hal/esp32s2" ]
esp32s3 = [ "esp-hal/esp32s3" ]

